--- a/Myinventory/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Myinventory/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,8 +152,8 @@ ContentBrowserTab1.SelectedPaths=/Game
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-Myinventory.TimeStamp=2023.02.24-15.35.52
-Myinventory.LastCompileMethod=Unknown
+Myinventory.TimeStamp=2023.02.24-16.13.08
+Myinventory.LastCompileMethod=External
 PakFile.TimeStamp=2023.02.23-17.00.22
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2023.02.23-17.00.24
@@ -1018,7 +1018,7 @@ HierarchicalLODOutliner.TimeStamp=2023.02.23-17.00.18
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
