--- a/Myinventory/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Myinventory/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,6 +147,12 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game
+GlobalAssetPicker.ActiveTypeFilters=
+GlobalAssetPicker.EnabledTypeFilters=
+GlobalAssetPicker.ActiveFrontendFilters=
+GlobalAssetPicker.EnabledFrontendFilters=
+GlobalAssetPicker.ThumbnailSizeScale=0.100000
+GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
@@ -1019,6 +1025,8 @@ HierarchicalLODOutliner.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Widget/UI_Crosshair.UI_Crosshair
+OpenAssetsAtExit=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1391,6 +1399,92 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+ThirdPersonCharacter_C.TransformCommon=True
+ThirdPersonCharacter_C.Animation=True
+ThirdPersonCharacter_C.Mesh=True
+ThirdPersonCharacter_C.CameraSettings=True
+ThirdPersonCharacter_C.CameraOptions=True
+ThirdPersonCharacter_C.Tick=True
+ThirdPersonCharacter_C.Camera=True
+ThirdPersonCharacter_C.ComponentTick=True
+ThirdPersonCharacter_C.CameraCollision=True
+ThirdPersonCharacter_C.Lag=True
+ThirdPersonCharacter_C.Physics=True
+ThirdPersonCharacter_C.Collision=True
+ThirdPersonCharacter_C.Lighting=True
+ThirdPersonCharacter_C.Rendering=True
+ThirdPersonCharacter_C.Tags=True
+ThirdPersonCharacter_C.ComponentReplication=True
+ThirdPersonCharacter_C.Activation=True
+ThirdPersonCharacter_C.Variable=True
+ThirdPersonCharacter_C.SkinWeights=True
+ThirdPersonCharacter_C.Cooking=True
+ThirdPersonCharacter_C.PostProcess=True
+ThirdPersonCharacter_C.Lens=True
+ThirdPersonCharacter_C.Color Grading=True
+ThirdPersonCharacter_C.Rendering Features=True
+ThirdPersonCharacter_C.Clothing=True
+ThirdPersonCharacter_C.MasterPoseComponent=True
+ThirdPersonCharacter_C.ClothingSimulation=True
+ThirdPersonCharacter_C.Navigation=True
+ThirdPersonCharacter_C.VirtualTexture=True
+ThirdPersonCharacter_C.Character Movement (General Settings)=True
+ThirdPersonCharacter_C.Character Movement: Walking=True
+ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+ThirdPersonCharacter_C.Character Movement (Networking)=True
+ThirdPersonCharacter_C.Character Movement: Swimming=True
+ThirdPersonCharacter_C.Character Movement: Flying=True
+ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+ThirdPersonCharacter_C.Character Movement=True
+ThirdPersonCharacter_C.Character Movement: Avoidance=True
+ThirdPersonCharacter_C.RootMotion=True
+ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+ThirdPersonCharacter_C.NavMovement=True
+ThirdPersonCharacter_C.Velocity=True
+ThirdPersonCharacter_C.PlanarMovement=True
+ThirdPersonCharacter_C.MovementComponent=True
+ThirdPersonCharacter_C.Shape=True
+ThirdPersonCharacter_C.Character=True
+ThirdPersonCharacter_C.Pawn=True
+ThirdPersonCharacter_C.Replication=True
+ThirdPersonCharacter_C.Actor=True
+ThirdPersonCharacter_C.Input=True
+ThirdPersonCharacter_C.Materials=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.ComponentTick=True
+CameraComponent.Lens=True
+CameraComponent.Color Grading=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1457,5 +1551,42 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widget/UI_Crosshair
+MRUItem0=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/Widget/UI_Crosshair
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
