added item into the world

--- a/Myinventory/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Myinventory/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,7 +75,7 @@ LaunchConfiguration=LaunchConfig_Default
 PackFilesForLaunch=NoPak
 bAutoCompileBlueprintsOnLaunch=True
 bLaunchSeparateServer=False
-PlayNetMode=PIE_Standalone
+PlayNetMode=PIE_ListenServer
 RunUnderOneProcess=True
 PlayNetDedicated=False
 PlayNumberOfClients=1
@@ -153,12 +153,14 @@ GlobalAssetPicker.ActiveFrontendFilters=
 GlobalAssetPicker.EnabledFrontendFilters=
 GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-Myinventory.TimeStamp=2023.02.24-16.13.08
+Myinventory.TimeStamp=2023.02.24-17.03.18
 Myinventory.LastCompileMethod=External
 PakFile.TimeStamp=2023.02.23-17.00.22
 PakFile.LastCompileMethod=Unknown
@@ -1025,8 +1027,6 @@ HierarchicalLODOutliner.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Widget/UI_Crosshair.UI_Crosshair
-OpenAssetsAtExit=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1485,6 +1485,29 @@ CameraComponent.ComponentReplication=True
 CameraComponent.Activation=True
 CameraComponent.Cooking=True
 CameraComponent.Events=True
+BP_Item_C.Tick=True
+BP_Item_C.Replication=True
+BP_Item_C.Rendering=True
+BP_Item_C.Collision=True
+BP_Item_C.Actor=True
+BP_Item_C.Input=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+BP_Item_C.TransformCommon=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1551,8 +1574,9 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/Widget/UI_Crosshair
+MRUItem0=/Game/BP_Item
+MRUItem1=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/Widget/UI_Crosshair
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1589,4 +1613,7 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[PlacementMode]
+RecentlyPlaced=/Game/BP_Item.BP_Item;
 
