created Inventory UI

--- a/Myinventory 5.0/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Myinventory 5.0/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -76,6 +76,10 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[ContentBrowser]
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
+
 [EditorStartup]
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
@@ -88,4 +92,66 @@ InstalledPlugins=XRVisualization
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+
+[DetailCategories]
+BP_Item_C.TransformCommon=True
+BP_Item_C.Rendering=True
+BP_Item_C.Replication=True
+BP_Item_C.Collision=True
+BP_Item_C.HLOD=True
+BP_Item_C.Input=True
+BP_Item_C.Actor=True
+BP_Item_C.Mesh=True
+BP_Item_C.Tick=True
+BP_Item_C.WorldPartition=True
+BP_Item_C.Events=True
+
+[ContentBrowserRecent]
+MRUItem0=/Game/BP_Item
+
+[AssetEditorToolkitTabLocation]
+/Game/BP_Item.BP_Item=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text","softclass")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=False
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
