--- a/Myinventory 5.0/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Myinventory 5.0/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -76,9 +76,31 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[MRU]
+MRUItem0=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
+GlobalAssetPicker.ActiveTypeFilters=
+GlobalAssetPicker.EnabledTypeFilters=
+GlobalAssetPicker.ActiveFrontendFilters=
+GlobalAssetPicker.EnabledFrontendFilters=
+GlobalAssetPicker.ThumbnailSize=2
+GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
@@ -92,6 +114,9 @@ InstalledPlugins=XRVisualization
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Widget/UI_InventoryItem.UI_InventoryItem
+OpenAssetsAtExit=/Game/BP_Item.BP_Item
+OpenAssetsAtExit=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [DetailCategories]
 BP_Item_C.TransformCommon=True
@@ -105,9 +130,64 @@ BP_Item_C.Mesh=True
 BP_Item_C.Tick=True
 BP_Item_C.WorldPartition=True
 BP_Item_C.Events=True
+UI_InventoryItem_C.Appearance=True
+UI_InventoryItem_C.Designer=True
+UI_InventoryItem_C.Input=True
+UI_InventoryItem_C.Interaction=True
+UI_InventoryItem_C.Performance=True
+UI_InventoryItem_C.Layout=True
+UI_InventoryItem_C.Behavior=True
+UI_InventoryItem_C.Render Transform=True
+UI_InventoryItem_C.Localization=True
+UI_InventoryItem_C.Accessibility=True
+UI_InventoryItem_C.Clipping=True
+UI_InventoryItem_C.Navigation=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+PropertyWrapper.Events=True
+ThirdPersonCharacter_C.Camera=True
+ThirdPersonCharacter_C.Tick=True
+ThirdPersonCharacter_C.Character=True
+ThirdPersonCharacter_C.Pawn=True
+ThirdPersonCharacter_C.Replication=True
+ThirdPersonCharacter_C.Rendering=True
+ThirdPersonCharacter_C.Collision=True
+ThirdPersonCharacter_C.Actor=True
+ThirdPersonCharacter_C.Input=True
+ThirdPersonCharacter_C.HLOD=True
+ThirdPersonCharacter_C.WorldPartition=True
+ThirdPersonCharacter_C.Events=True
+K2Node_MakeStruct.PinOptions=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP_Item
+MRUItem0=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/BP_Item
+MRUItem2=/Game/Widget/UI_InventoryItem
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_Item.BP_Item=1
@@ -154,4 +234,74 @@ PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
+
+[DetailPropertyExpansion]
+BP_Item_C=
+Item=
+Image="\"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
+Widget=
+Visual=
+Object=
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
 
