you can click on item in inventory

--- a/Myinventory 5.0/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Myinventory 5.0/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1070,6 +1070,7 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 OpenAssetsAtExit=/Game/Widget/UI_Inventory.UI_Inventory
 OpenAssetsAtExit=/Game/Widget/UI_InventoryItem.UI_InventoryItem
+OpenAssetsAtExit=/Game/Widget/UI_W.UI_W
 
 [DetailCategories]
 BP_Item_C.TransformCommon=True
@@ -1238,13 +1239,38 @@ WrapBox.Performance=True
 WrapBox.Clipping=True
 WrapBox.Navigation=True
 WrapBox.Localization=True
+UI_W_C.Appearance=True
+UI_W_C.Designer=True
+UI_W_C.Input=True
+UI_W_C.Interaction=True
+UI_W_C.Performance=True
+UI_W_C.Layout=True
+UI_W_C.Behavior=True
+UI_W_C.Render Transform=True
+UI_W_C.Localization=True
+UI_W_C.Accessibility=True
+UI_W_C.Clipping=True
+UI_W_C.Navigation=True
+TextBlock.Layout=True
+TextBlock.Content=False
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+UI_Inventory_C.Default=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widget/UI_InventoryItem
-MRUItem1=/Game/Widget/UI_Inventory
-MRUItem2=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter
-MRUItem3=/Game/Widget/UI_Interface
-MRUItem4=/Game/BP_Item
+MRUItem0=/Game/Widget/UI_W
+MRUItem1=/Game/Widget/UI_InventoryItem
+MRUItem2=/Game/Widget/UI_Inventory
+MRUItem3=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter
+MRUItem4=/Game/Widget/UI_Interface
+MRUItem5=/Game/BP_Item
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_Item.BP_Item=0
@@ -1303,6 +1329,8 @@ Image=
 Widget=
 Visual=
 Object=
+TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1401,4 +1429,7 @@ Project=D:/Unreal Eninge/UE_5.0/
 [Python]
 LastDirectory=
 RecentsFiles=D:/Unreal Eninge/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[MessageLog]
+LastLogListing=PIE
 
